# CPU-scheduler

./: .gitignore  CMakeLists.txt  README.md  RoundRobin.py  RoundRobinTest.py  Round_Robin_test.py  Run_Gui.py  Run_Gui.spec  launcher.py  setup.py
.github/workflows/: python-tests.yml
Gui/: Gannt.py  Gannt_Chart.py  Start_Page.py  Statistics_Window.py  Table_and_Gannt.py  Tree.py
core/: utils.py
core/common/: AreLoadedTasksSatisfied.py  EmptyOption.py  Priority_Task.py  SJF_Task.py  Scheduler.py  SchedulerStats.py  Simulator.py  Task.py  TaskEntry.py
core/schedulers/: FCFS_Schedule.py  Priority_non_prem.py  Priority_prem.py  RoundRobin.py  SJF_non_prem.py  SJF_prem.py
docs/: conf.py  index.md
docs/sections/: RoundRobin.md  fcfs.md  gui.md  intro.md  priority.md  scheduler.md  simulator.md  sjf.md
src/core/common/: EmptyOption.cpp  EmptyOption.h  Scheduler.h  Simulator.h  TaskEntry.cpp  TaskEntry.h
src/core/schedulers/: FCFS_Scheduler.h
test/: RoundRobinTest.py  fcfs_test.py  fcfs_test_1.cpp  fcfs_test_1.py  fcfsproMax_test.py  priority_non_prim.py  priority_non_prim_test.py  priority_prem_test.py  round_robin_test.py  satisfaction_and_finished_test.py  sjf_non_prem_test.py  sjf_prem_test.py  statistics_test.py
